--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.2.0
   get: ^4.6.5
-  share: ^2.0.4
+  share_plus: ^7.0.2
   percent_indicator: ^4.2.3
+  firebase_core: ^2.15.0
+  flutter_share: ^2.0.0
+  cloud_firestore: ^4.8.3
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +88,13 @@ flutter:
           weight: 700
         - asset: assets/fonts/GmarketSansLight.otf
           weight: 300
+    - family: UhBee ZIGLE
+      fonts:
+        - asset: assets/fonts/UhBee ZIGLE.ttf
+          weight: 400
+        - asset: assets/fonts/UhBee ZIGLE Bold.ttf
+          weight: 700
+
 
   # fonts:
   #   - family: Schyler
